--- a/_0.ipynb
+++ b/_0.ipynb
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# --------------------------------------------------Topic Modelling------------------------------------------------------------"
+    "# --------------------------------------------------Topic Modelling--------------------------------------"
    ]
   },
   {
@@ -1012,16 +1012,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": ""
   },
   "orig_nbformat": 4
  },
